--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
         function goto() {
             window.location.href = document.getElementById("textin").value;
         };
+        function infos() {
+            window.location.href = "chrome://version"
+            window.location.href = "chrome://about"
+            window.location.href = "opera://about"
+        }
     </script>
     <input type="text" id="textin" name="name" required
     minlength="1" maxlength="121122" size="10">
     <input type="button" value="goUrl" onclick="goto()"/>
+    <input type="button" value="infobrowser" onclick="infos()"/>
 </body>
